--- a/candlewebsite/package.json
+++ b/candlewebsite/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.7",
+    "fontawesome": "^5.6.3",
     "json-server": "^1.0.0-alpha.23",
     "next": "14.1.0",
     "react": "^18",
