--- a/candlewebsite/package.json
+++ b/candlewebsite/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "fontawesome": "^5.6.3",
     "json-server": "^1.0.0-alpha.23",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
