--- a/candlewebsite/package.json
+++ b/candlewebsite/package.json
@@ -13,12 +13,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "fontawesome": "^5.6.3",
     "json-server": "^1.0.0-alpha.23",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "stripe": "^14.21.0"
   },
   "devDependencies": {
     "@types/node": "^20",
