--- a/candlewebsite/package.json
+++ b/candlewebsite/package.json
@@ -14,6 +14,8 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
+    "firebase": "^10.10.0",
+    "firebase-admin": "^12.0.0",
     "fontawesome": "^5.6.3",
     "json-server": "^1.0.0-alpha.23",
     "next": "14.1.0",
