--- a/candlewebsite/package.json
+++ b/candlewebsite/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next start",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
