--- a/candlewebsite/firebase.json
+++ b/candlewebsite/firebase.json
@@ -1,10 +1,11 @@
 {
   "hosting": {
-    "public": "app",
+    "public": "out",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ]
+  
   }
 }
