--- a/candlewebsite/package.json
+++ b/candlewebsite/package.json
@@ -15,12 +15,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "compressorjs": "^1.2.1",
     "dotenv": "^16.4.5",
     "firebase": "^10.10.0",
     "firebase-admin": "^12.0.0",
     "fontawesome": "^5.6.3",
     "json-server": "^1.0.0-alpha.23",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
