--- a/candlewebsite/firebase.json
+++ b/candlewebsite/firebase.json
@@ -1,11 +1,11 @@
 {
   "hosting": {
     "public": "out",
+    "output":"export",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ]
-  
   }
 }
