implemented firebase functions

--- a/candlewebsite/firebase.json
+++ b/candlewebsite/firebase.json
@@ -51,10 +51,26 @@
         "source": "/category/Sculptural_Candles",
         "destination": "/category/Sculptural_Candles.html"
       },
-      {
-        "source": "/products/**",
-        "destination": "/index.html"
+      {"source": "/products/*/*",
+        "destination":"/products/*/*"
       }
     ]
-  }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run build"
+      ]
+    }
+  ]
 }
+
