updated products page to work within deployed environment

--- a/candlewebsite/firebase.json
+++ b/candlewebsite/firebase.json
@@ -51,8 +51,9 @@
         "source": "/category/Sculptural_Candles",
         "destination": "/category/Sculptural_Candles.html"
       },
-      {"source": "/products/*/*",
-        "destination":"/products/*/*"
+      {
+        "source": "/products/*",
+        "destination":"/products.html"
       }
     ]
   },
