--- a/candlewebsite/functions/package.json
+++ b/candlewebsite/functions/package.json
@@ -14,12 +14,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "firebase": "^10.12.2",
     "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.0"
+    "firebase-functions": "^5.0.0",
+    "firestore": "^1.1.6",
+    "stripe": "^15.8.0"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.1.0",
+    "typescript": "^4.9.0"
   },
   "private": true
 }
